Fix clear button position on mobile

--- a/app/stylesheets/_layout.scss
+++ b/app/stylesheets/_layout.scss
@@ -158,9 +158,6 @@ body.docs {
     }
   }
   @include respond-to($container-sm) {
-    .clear {
-      right: 17%;
-    }
   }
 }
 
